--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-214.8KB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-375.7KB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇬🇧 英国-722.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-1.19MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-2.69MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-988.4KB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-381.0KB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-330.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-687.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.89MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-811.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-254.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 85.208.108.94, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-1.99MB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-345.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-418.4KB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.23MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-214.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-375.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-722.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-988.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-381.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-214.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-375.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-722.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-988.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-381.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-214.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-375.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-722.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-988.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-381.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-214.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-375.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-722.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-988.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-381.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-214.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-375.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-722.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-988.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-381.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-214.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-375.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-722.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-988.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-381.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-214.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-375.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-722.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-988.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-381.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-687.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-811.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
