--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.94, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-418.4KB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-330.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-430.1KB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-391.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-908.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-1.20MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-313.8KB/s(Youtube:不良林), server: hk-hkg-it2-svm-tr.node.inforun.work, port: 13889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: hk-hkg-it2-svm-tr.node.inforun.work, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-3.48MB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-311.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.81MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-1.90MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.56MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-1.70MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 85.208.108.94, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-418.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-330.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-430.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-908.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
