--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.60MB/s(Youtube:不良林), server: 85.208.108.94, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-1.20MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.12MB/s(Youtube:不良林), server: 85.208.108.94, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-3.48MB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-311.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.81MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.90MB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.56MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-1.70MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.01MB/s(Youtube:不良林), server: 85.208.108.94, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-1.60MB/s(Youtube:不良林), server: 85.208.108.94, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-189.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-992.4KB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-254.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-476.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-683.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-778.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.00MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-3.01MB/s(Youtube:不良林), server: yhkt2.154cc.xyz, port: 12588, type: vmess, uuid: 883a829f-64ba-372e-8a9c-4a9bf5367697, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-476.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-683.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-476.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-683.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-476.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-683.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-476.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-683.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-476.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-683.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-476.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-683.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-189.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-992.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-476.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-683.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.00MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
